   connecting dark with "cd"). [MG]
 * sql() now takes a fourth argument, to return the number of affected rows.
   Suggested by Mercutio.
 * baseconv() fixes for malformed input, "-" ambiguity in base 63/64, and
   missing "-" sign for single-digit output.
 * Flag names now have similar restrictions to attribute names. [MG]

Functions
 * llocks() without any arguments returns a list of the standard locks.
 * unsetq(), to erase queue registers. [GM]
 * and[l]flags(), or[l]flags(), andlpowers() and orlpowers() now all return
   #-1 if an invalid flag/power is given. Suggested by AnneLions. [MG]
 * benchmark(), to benchmark softcode.
 * Added "flag" as a category to valid(), to check for valid names for
   @flag/add and @power/add. [MG]

Fixes:
 * Using some substitutions on the connect/motd/etc attributes introduced
   in p11 could cause a crash. Reported by Minion@M*U*S*H. [GM]
 * Substitions on the connect/motd/etc attributes now work as expected
   when a player is connected. Suggested by Minion@M*U*S*H. [GM]
 * English matching works better with possessive get
   (get box's 2nd thing). Reported by israphel.
 * Many more messages generated by the server have been 
   marked as translatable. By Stoko.
 * 'No such file' messages were logged by mistake when connect_file and
   similar options were set to a dbref/attr. Reported by Zalethon. [MG]

Version 1.8.3 patchlevel 11                     Jan 01, 2010

Major changes:
  * The WHO, DOING and SESSION commands are now normal game commands,
    and can be @hook'd, typed in lower-case, etc. (The WHO at the login
    screen is separate.) If you have a softcoded 'who' command, you will
    need to @hook/override WHO for it to continue working. Suggested by
    Bane. [MG]
  * The "take" command has been moved from the hardcode into alias.cnf.
    If you want to keep it as an alias for "get", you should add the line
    "command_alias get take" into your alias.cnf. [MG]

Configuration: